--- a/Resource Monitor/App.xaml
+++ b/Resource Monitor/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Monitor.App"
+﻿<Application x:Class="ResourceMonitor.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Monitor"
+             xmlns:local="clr-namespace:ResourceMonitor"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
